# aoc-data

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yml  test.yml
aoc_data/: __init__.py  errors.py  models.py
aoc_data/data/2022/: day01.json  day02.json
aoc_data/data/year2023/: day01.json  day02.json
aoc_data/data/year2024/: day01.json  day02.json
tests/: __init__.py  data_model_test.py  errors_test.py  loading_test.py
